--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 				</li>
 				<li><a href='#'>购物0件</a></li>
 				<li><a href='#'>帮助中心</a></li>
-				<li>|<a></a></li>
+				<li><a>|</a></li>
 				<li class='mobile submenue'>
 					<a href='#'>手机商城</a>
 					<div class='showDiv'>
@@ -175,9 +175,28 @@
 			<div class='section_title'>
 				<h2>精品团购</h2>
 				<p><a href='#'>更多团购</a></p>
-				<p><a href='#'>更多团购</a></p>
 			</div>
-			<div></div>
+			<div class='jtuan clear'>
+				<ul class='jtuan_list'>
+					<li><a href='#'><img src='img/jtuan_1.jpg'/></a>
+						<i class='border'></i>
+					</li>
+					<li><a href='#'><img src='img/jtuan_2.jpg'/></a>
+						<i class='border'></i>
+					</li>
+					<li><a href='#'><img src='img/jtuan_4.jpg'/></a>
+						<i class='border'></i>
+					</li>
+					<li><a href='#'><img src='img/jtuan_3.jpg'/></a>
+						<i class='border'></i>
+					</li>										
+				</ul>
+			</div>
+		</div>
+		<div class='section oneyuan'>
+			<div class='section_title'>
+				<h2>一元夺宝</h2>
+			</div>
 		</div>
 	</div>
 </body>
