--- a/src/index.html
+++ b/src/index.html
@@ -194,10 +194,401 @@
 			</div>
 		</div>
 		<div class='section oneyuan'>
+			<div class='oneyuan_title'>
+			</div>
+			<ul class='oneyuan_list'>
+				<li>
+					<div class='oneyuan_pic'>
+						<img src='img/oneyuan1.jpg'/>
+						<span>据揭晓还需要<b>4627</b>人次</span>
+						<div class='erweima'>
+							<div class='overlay'></div>
+							<img src='img/oneyuan1.png'/>
+							<span></span>
+						</div>
+					</div>
+					<div class='oneyuan_text'>苹果 iPhone 6S 全网通</div>
+				</li>
+				<li>
+					<div class='oneyuan_pic'>
+						<img src='img/oneyuan2.jpg'/>
+						<span>据揭晓还需要<b>4627</b>人次</span>
+						<div class='erweima'>
+							<div class='overlay'></div>
+							<img src='img/oneyuan2.png'/>
+							<span></span>
+						</div>
+					</div>
+					<div class='oneyuan_text'>苹果 iPhone 6S 全网通</div>
+				</li>
+				<li>
+					<div class='oneyuan_pic'>
+						<img src='img/oneyuan3.jpg'/>
+						<span>据揭晓还需要<b>4627</b>人次</span>
+						<div class='erweima'>
+							<div class='overlay'></div>
+							<img src='img/oneyuan3.png'/>
+							<span></span>
+						</div>
+					</div>
+					<div class='oneyuan_text'>苹果 iPhone 6S 全网通</div>
+				</li>
+				<li>
+					<div class='oneyuan_pic'>
+						<img src='img/oneyuan4.jpg'/>
+						<span>据揭晓还需要<b>4627</b>人次</span>
+						<div class='erweima'>
+							<div class='overlay'></div>
+							<img src='img/oneyuan4.png'/>
+							<span></span>
+						</div>
+					</div>
+					<div class='oneyuan_text'>苹果 iPhone 6S 全网通</div>
+				</li>
+				<li>
+					<div class='oneyuan_pic'>
+						<img src='img/oneyuan5.jpg'/>
+						<span>据揭晓还需要<b>4627</b>人次</span>
+						<div class='erweima'>
+							<div class='overlay'></div>
+							<img src='img/oneyuan5.png'/>
+							<span></span>
+						</div>
+					</div>
+					<div class='oneyuan_text'>苹果 iPhone 6S 全网通</div>
+				</li>
+				<li>
+					<div class='oneyuan_pic'>
+						<img src='img/oneyuan6.jpg'/>
+						<span>据揭晓还需要<b>4627</b>人次</span>
+						<div class='erweima'>
+							<div class='overlay'></div>
+							<img src='img/oneyuan6.png'/>
+							<span></span>
+						</div>
+					</div>
+					<div class='oneyuan_text'>苹果 iPhone 6S 全网通</div>
+				</li>									
+			</ul>
+		</div>
+		<div class='section special'>
 			<div class='section_title'>
-				<h2>一元夺宝</h2>
+				<h2>特色购</h2>
+			</div>
+			<div class='special_text'>
+				<div class='left'><img src='img/special1.jpg'/></div>
+				<div class='center'>
+					<a href='#'><img src='img/special2.1.jpg'/></a>
+					<a href='#'><img class='addheight' src='img/special2.2.jpg'/></a>
+				</div>
+				<ul class='right'>
+					<li><a href='#'><img src='img/special3.11.jpg'/></a></li>
+					<li><a href='#'><img src='img/special3.12.jpg'/></a></li>
+					<li><a href='#'><img src='img/special3.13.jpg'/></a></li>
+				</ul>
+				<ul class='right down'>
+					<li><a href='#'><img src='img/special3.22.jpg'/></a></li>
+					<li><a href='#'><img src='img/special3.23.jpg'/></a></li>
+					<li><a href='#'><img class='last' src='img/special3.23.jpg'/></a></li>
+				</ul>
 			</div>
 		</div>
+		<div class='sectionfloor sec_mobile'>
+			<div class='section_title'>
+				<h2>1F 手机通讯</h2>
+				<p>
+					<a href='#'>华为</a>|
+					<a href='#'>苹果</a>|
+					<a href='#'>三星</a>|
+					<a href='#'>魅族</a>|
+					<a href='#'>oppo</a>|
+					<a href='#'>小米</a>
+				</p>
+			</div>
+			<div class='floor_text'>
+				<div class='main'>
+					<a href='#'><img src='img/floor1.jpg'/></a>
+				</div>
+				<ul class='floorList'>
+					<li class='carousel'></li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.1.jpg'/></a>
+					</li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.2.jpg'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.3.jpg'/></a></li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.3.jpg'/></a>
+						</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.2.jpg'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.1.jpg'/></a>
+					</li>
+				</ul>
+			</div>
+			<ul class='brand_list'>
+				<li><a href='#'><img src='img/floor11.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor12.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor13.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor14.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor15.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor16.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor17.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor18.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor19.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor20.jpg'/></a></li>
+			</ul>
+		</div>
+			<div class='sectionfloor sec_mobile'>
+			<div class='section_title'>
+				<h2>2F 电脑数码/配件</h2>
+				<p>
+					<a href='#'>华为</a>|
+					<a href='#'>苹果</a>|
+					<a href='#'>三星</a>|
+					<a href='#'>魅族</a>|
+					<a href='#'>oppo</a>|
+					<a href='#'>小米</a>
+				</p>
+			</div>
+			<div class='floor_text'>
+				<div class='main'>
+					<a href='#'><img src='img/floor2.png'/></a>
+				</div>
+				<ul class='floorList'>
+					<li class='carousel'></li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor21.png'/></a>
+					</li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor22.png'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor23.png'/></a></li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor24.png'/></a>
+						</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor25.png'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor23.png'/></a>
+					</li>
+				</ul>
+			</div>
+			<ul class='brand_list'>
+				<li><a href='#'><img src='img/floor11.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor12.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor13.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor14.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor15.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor16.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor17.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor18.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor19.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor20.jpg'/></a></li>
+			</ul>
+		</div>
+		<div class='sectionfloor sec_mobile'>
+			<div class='section_title'>
+				<h2>3F 智能数码/家电</h2>
+				<p>
+					<a href='#'>华为</a>|
+					<a href='#'>苹果</a>|
+					<a href='#'>三星</a>|
+					<a href='#'>魅族</a>|
+					<a href='#'>oppo</a>|
+					<a href='#'>小米</a>
+				</p>
+			</div>
+			<div class='floor_text'>
+				<div class='main'>
+					<a href='#'><img src='img/floor3.jpg'/></a>
+				</div>
+				<ul class='floorList'>
+					<li class='carousel'></li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor31.jpg'/></a>
+					</li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor32.jpg'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor33.jpg'/></a></li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor34.jpg'/></a>
+						</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor35.jpg'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor33.jpg'/></a>
+					</li>
+				</ul>
+			</div>
+			<ul class='brand_list'>
+				<li><a href='#'><img src='img/floor11.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor12.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor13.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor14.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor15.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor16.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor17.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor18.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor19.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor20.jpg'/></a></li>
+			</ul>
+		</div>
+			<div class='sectionfloor sec_mobile'>
+			<div class='section_title'>
+				<h2>4F DIY硬件/外设</h2>
+				<p>
+					<a href='#'>华为</a>|
+					<a href='#'>苹果</a>|
+					<a href='#'>三星</a>|
+					<a href='#'>魅族</a>|
+					<a href='#'>oppo</a>|
+					<a href='#'>小米</a>
+				</p>
+			</div>
+			<div class='floor_text'>
+				<div class='main'>
+					<a href='#'><img src='img/floor4.png'/></a>
+				</div>
+				<ul class='floorList'>
+					<li class='carousel'></li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor41.jpg'/></a>
+					</li>
+					<li class='tall'>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor42.jpg'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor45.jpg'/></a></li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor44.png'/></a>
+						</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor45.jpg'/></a>
+					</li>
+					<li>
+						<div class='title'><a href='#'>乐视手机1S</a></div>
+						<p>5.5寸屏+镜面指纹+乐闪冲</p>
+						<a href='#'><img src='img/floor1.1.jpg'/></a>
+					</li>
+				</ul>
+			</div>
+			<ul class='brand_list'>
+				<li><a href='#'><img src='img/floor11.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor12.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor13.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor14.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor15.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor16.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor17.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor18.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor19.jpg'/></a></li>
+				<li><a href='#'><img src='img/floor20.jpg'/></a></li>
+			</ul>
+		</div>
+	</div>
+	<div class='bottom_gk center'>
+		<img src='img/bottom_gk.jpg'/>
+	</div>
+	<div class='footer_up'>
+		<ul class='center footer_service'>
+			<li><i><img src='img/footer1.jpg'/></i><a href='#'>行货保证</a></li>
+			<li><i><img src='img/footer2.jpg'/></i><a href='#'>行货保证</a></li>
+			<li><i><img src='img/footer3.jpg'/></i><a href='#'>行货保证</a></li>
+			<li><i><img src='img/footer4.jpg'/></i><a href='#'>行货保证</a></li>
+			<li><i><img src='img/footer5.jpg'/></i><a href='#'>行货保证</a></li>
+		</ul>
+		<div class='center fs-relate'>
+			<ul>
+				<li class='title'>购物指南</li>
+				<li><a hre='#'>购物流程</a></li>
+				<li><a hre='#'>账号注册</a></li>
+				<li><a hre='#'>付款方式</a></li>
+			</ul>
+			<ul>
+				<li class='title'>售后服务</li>
+				<li><a hre='#'>购物流程</a></li>
+				<li><a hre='#'>退款退货流程</a></li>
+				<li><a hre='#'>付款方式</a></li>
+			</ul>
+			<ul>
+				<li class='title'>商场保证</li>
+				<li><a hre='#'>购物流程</a></li>
+				<li><a hre='#'>账号注册</a></li>
+				<li><a hre='#'>付款方式</a></li>
+				<li><a hre='#'>48小时发货</a></li>
+				<li><a hre='#'>发票保障</a></li>	
+			</ul>
+			<ul>
+				<li class='title'>商家服务</li>
+				<li><a hre='#'>购物流程</a></li>
+				<li><a hre='#'>账号注册</a></li>
+				<li><a hre='#'>付款方式</a></li>
+			</ul>
+			<ul class='hotline'>
+				<li class='title'>400-678-0068</li>
+				<li>工作日 9:00 - 18:00</li>
+				<li class='lastli'>关注新浪微博</li>
+			</ul>						
+		</div>
+	</div>
+	<div class='footer_down'>
+
 	</div>
 </body>
 </html>
