--- a/src/index.html
+++ b/src/index.html
@@ -545,7 +545,7 @@
 	<div class='bottom_gk center'>
 		<img src='img/bottom_gk.jpg'/>
 	</div>
-	<div class='footer_up'>
+	<div class='footer_up clear'>
 		<ul class='center footer_service'>
 			<li><i><img src='img/footer1.jpg'/></i><a href='#'>行货保证</a></li>
 			<li><i><img src='img/footer2.jpg'/></i><a href='#'>行货保证</a></li>
@@ -584,11 +584,37 @@
 				<li class='title'>400-678-0068</li>
 				<li>工作日 9:00 - 18:00</li>
 				<li class='lastli'>关注新浪微博</li>
+			</ul>
+			<ul class='coo'>
+				<li class='title'>商家合作</li>
+				<li>错过天猫？别再错过我们！</li>
+				<li>ZOL商城开启全新旅程！</li>
+				<li class='lastli'><a href='#'><span>关于入驻</span>></a></li>
 			</ul>						
 		</div>
 	</div>
 	<div class='footer_down'>
-
+		<div class='partners'>
+			<span>合作伙伴：</span>
+			<p>
+				<a href='#'>卷皮网</a>|
+				<a href='#'>电子商务平台</a>|
+				<a href='#'>中国电子银行网</a>|
+				<a href='#'>华为商城</a>|
+				<a href='#'>三帝贸易网</a>|
+				<a href='#'>团购</a>|
+				<a href='#'>eNet商城</a>|
+				<a href='#'>钻石</a>|
+				<a href='#'>家具网</a>|
+				<a href='#'>手表品牌大全</a>|
+				<a href='#'>伊秀女性网</a>|
+				<a href='#'>华强电子网</a>|
+				<a href='#'>电子产品世界</a>|
+				<a href='#'>挖东西比价网</a>|	
+				<a href='#'>易购网</a>|
+				<a href='#'>易购网</a>|								
+			</p>
+		</div>
 	</div>
 </body>
 </html>
