购物车cookie，用户登录cookie，懒加载未做

--- a/src/html/list.html
+++ b/src/html/list.html
@@ -4,18 +4,20 @@
 	<meta charset="UTF-8">
 	<title>列表页面</title>
 	<link href="../css/common.css" type="text/css" rel="stylesheet">
+	<link href="../css/list.css" type="text/css" rel="stylesheet">
 	<script src="../assets/jquery-1.12.0.js"></script>
-	<script src="../js/index.js"></script>
 	<script src="../js/common.js"></script>
+	<script src="../js/list.js"></script>
 </head>
 <body>
 		<!--top部分-->
+			<!--top部分-->
 	<div class='topbar '>
 		<div class='wrapper'>
 			<div class='logininfo'>
 				<span class='nocolorc'><a href='index.html'>商城首页</a></span>
-				<span>Hi~欢迎来到ZOL商城，请<a href='#'>登录</a></span>
-				<span class='no-padding'><a href='#'>免费注册</a></span>
+				<span>Hi~欢迎来到ZOL商城，请<a href='login.html'>登录</a></span>
+				<span class='no-padding'><a href='register.html'>免费注册</a></span>
 			</div>
 			<ul class="topmenu">
 				<li><a href="#">我的订单</a></li>
@@ -85,8 +87,19 @@
 					<a href='#'>手机通讯</a>/<a href="#">手机配件</a>
 					<div>
 						<dl class="service">
-                            <dt><a target="_blank" href="#">服务保障</a></dt>
-                            <dd><a target="_blank" href="#"><i class="iconfont"></i>行货保证</a><a href="#"><i class="iconfont"></i>发票保障</a><a target="_blank" href="#"><i class="iconfont"></i>顺丰包邮</a><a target="_blank" href="#"><i class="iconfont"></i>无忧退换</a><a target="_blank" href="#"><i class="iconfont"></i>先行赔付</a></dd>
+                            <dt><a  href="#">服务保障</a></dt>
+                            <dd>
+                            	<a  href="#">
+                            		<i class="iconfont"></i>行货保证</a>
+                            	<a href="#">
+                            		<i class="iconfont"></i>发票保障</a>
+                            	<a  href="#">
+                            		<i class="iconfont"></i>顺丰包邮</a>
+                            	<a  href="#">
+                            		<i class="iconfont"></i>无忧退换</a>
+                            	<a  href="#">
+                            		<i class="iconfont"></i>先行赔付</a>
+                            </dd>
                         </dl>
 					</div>
 				</li>
@@ -131,7 +144,389 @@
 			</div>
 		</div>
 	</div>
-
+	<div class='brand_carousel center'>
+		<dl>
+			<dt>
+				<a href='#'>
+					<img src='../img/huawei.jpg'/>
+					<span>华为</span>
+				</a>
+			</dt>
+			<dd>
+				<div class='changebox'>
+					<a class='change pre'><i></i></a>
+					<div class='brand_list'>
+						<ul class='brandlist'>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb1.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb2.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb3.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb4.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb5.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>															
+							<li>
+								<a href='#'>
+									<img src='../img/hwb6.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb7.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb8.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb9.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb10.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb1.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb2.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb3.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb4.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb5.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>															
+							<li>
+								<a href='#'>
+									<img src='../img/hwb6.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb7.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb8.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb9.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb10.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>	
+							<li>
+								<a href='#'>
+									<img src='../img/hwb1.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb2.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb3.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb4.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb5.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>															
+							<li>
+								<a href='#'>
+									<img src='../img/hwb6.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb7.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb8.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb9.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>
+							<li>
+								<a href='#'>
+									<img src='../img/hwb10.jpg'/>
+									<p>华为</p>
+								</a>
+							</li>																			
+						</ul>
+					</div>
+					<a class='change next'><i></i></a>
+				<div>
+			</dd>
+		</dl>
+	</div>
+	<div class='crumbs_bar center'>
+		<div class='huawei_total'>
+			共<em>608</em>件
+		</div>
+		<ul class='crumbs_list'>
+			<li><a href="../index.html" class="home">首页</a></li>
+			<li class='gt'>></li>
+			<li>
+				<div class='group'>
+					<span>手机/手机配件<i></i></span>
+					<div class='group_list'>
+						<ul>
+							<li><a href="#">DIY主机/硬件</a></li>
+							<li><a href="#">品牌整机</a></li>
+							<li><a href="#">办公设备</a></li>
+							<li><a href="#">数码周边产品</a></li>
+							<li><a href="#">投影机</a></li>
+							<li><a href="#">无线网络</a></li> >
+							<li><a href="#">相机/摄像机</a></li>
+ 						</ul>
+ 						<ul>
+							<li><a href="#">DIY主机/硬件</a></li>
+							<li><a href="#">品牌整机</a></li>
+							<li><a href="#">办公设备</a></li>
+							<li><a href="#">数码周边产品</a></li>
+							<li><a href="#">投影机</a></li>
+							<li><a href="#">无线网络</a></li> >
+							<li><a href="#">相机/摄像机</a></li>
+ 						</ul>
+ 						<ul>
+							<li><a href="#">DIY主机/硬件</a></li>
+							<li><a href="#">品牌整机</a></li>
+							<li><a href="#">办公设备</a></li>
+							<li><a href="#">数码周边产品</a></li>
+							<li><a href="#">投影机</a></li>
+							<li><a href="#">无线网络</a></li> >
+							<li><a href="#">相机/摄像机</a></li>
+ 						</ul>
+					</div>
+				</div>
+			</li>
+			<li class='gt'>></li>
+			<li>
+				<div class='group phone'>
+					<span>手机<i></i></span>
+					<div class='group_list'>
+						<ul>
+							<li><a href="#">DIY主机/硬件</a></li>
+							<li><a href="#">品牌整机</a></li>
+							<li><a href="#">办公设备</a></li>
+							<li><a href="#">数码周边产品</a></li>
+							<li><a href="#">投影机</a></li>
+							<li><a href="#">无线网络</a></li> >
+							<li><a href="#">相机/摄像机</a></li>
+ 						</ul>
+					</div>
+				</div>
+			</li>
+			<li class='gt'>></li>
+			</li>
+			<li>
+				<div class='group huawei'>
+					<span>品牌：<em>华为</em><i></i></span>
+				</div>
+			</li>
+		</ul>
+	</div>
+	<div class='center selector'>
+		<div class='select_box'>
+			<div class='select_item'>
+				<dl>
+					<dt>价格</dt>
+					<dd>
+						<ul class='select_item_list'>
+							<li><a href='#'>500元以下</a></li>
+							<li><a href='#'>500-1000元</a></li>
+							<li><a href='#'>1000-1500元</a></li>
+							<li><a href='#'>1500-2000元</a></li>
+							<li><a href='#'>2000-3000元</a></li>
+							<li><a href='#'>4000元以上</a></li>
+						</ul>
+					</dd>
+				</dl>
+			</div>
+			<div class='select_item'>
+				<dl>
+					<dt>特性</dt>
+					<dd>
+						<ul class='select_item_list'>
+							<li><a href='#'>大屏幕</a></li>
+							<li><a href='#'>双卡双待</a></li>
+							<li><a href='#'>大容量电池</a></li>
+							<li><a href='#'>指纹识别</a></li>
+							<li><a href='#'>拍照神器</a></li>
+							<li><a href='#'>千元机</a></li>
+							<li><a href='#'>指纹识别</a></li>
+							<li><a href='#'>拍照神器</a></li>
+							<li><a href='#'>千元机</a></li>
+							<li><a href='#'>大屏幕</a></li>
+							<li><a href='#'>双卡双待</a></li>
+							<li><a href='#'>大容量电池</a></li>
+							<li><a href='#'>指纹识别</a></li>							
+						</ul>
+					</dd>
+				</dl>
+			</div>
+			<div class='select_item'>
+				<dl>
+					<dt>价格</dt>
+					<dd>
+						<ul class='select_item_list'>
+							<li><a href='#'>500元以下</a></li>
+							<li><a href='#'>500-1000元</a></li>
+							<li><a href='#'>1000-1500元</a></li>
+							<li><a href='#'>1500-2000元</a></li>
+							<li><a href='#'>2000-3000元</a></li>
+							<li><a href='#'>4000元以上</a></li>
+						</ul>
+					</dd>
+				</dl>
+			</div>
+			<div class='select_item'>
+				<dl>
+					<dt>特性</dt>
+					<dd>
+						<ul class='select_item_list'>
+							<li><a href='#'>大屏幕</a></li>
+							<li><a href='#'>双卡双待</a></li>
+							<li><a href='#'>大容量电池</a></li>
+							<li><a href='#'>指纹识别</a></li>
+							<li><a href='#'>拍照神器</a></li>
+							<li><a href='#'>千元机</a></li>
+							<li><a href='#'>指纹识别</a></li>
+							<li><a href='#'>拍照神器</a></li>
+							<li><a href='#'>千元机</a></li>
+							<li><a href='#'>大屏幕</a></li>
+							<li><a href='#'>双卡双待</a></li>
+							<li><a href='#'>大容量电池</a></li>
+							<li><a href='#'>指纹识别</a></li>							
+						</ul>
+					</dd>
+				</dl>
+			</div>
+		</div>
+		<div class='show_more click center'>
+			<span>更多选项<i></i></span>
+		</div>
+	</div>
+	<div class='decprice center clear'>
+		<div class='hd'>
+			<div class='title'>
+				<span>正在进行中的活动</span>
+			</div>
+		</div>
+		<ul class='decprice_list'>
+			<li>
+				<a href='#'>
+					<img src='../img/decprice1.jpg'/>
+				</a>
+			</li>
+			<li>
+				<a href='#'>
+					<img src='../img/decprice2.jpg'/>
+				</a>
+			</li>
+			<li>
+				<a href='#'>
+					<img src='../img/decprice3.jpg'/>
+				</a>
+			</li>
+			<li class='last'>
+				<a href='#'>
+					<img src='../img/decprice4.jpg'/>
+				</a>
+			</li>
+		</ul>
+		<div class='search_box'>
+			<form class='search' action='#'>
+				<input type='text' class='put'/>
+				<input type='submit' class='btn' value='搜索'/>
+			</form>
+		</div>
+	</div>
 	<!--footer-->
 	<div class='footer_up clear'>
 		<ul class='center footer_service'>
@@ -207,6 +602,31 @@
 				<li><a href='#'><img src='../img/footerdown3.jpg'/></a></li>
 			</ul>
 		</div>
+	</div>
+	<a class='index_diao' href='#'><img src='../img/index_diao.png'/></a>
+	<div class='right_bar'>
+		<div class='right_bar_dl'>
+			<dl>
+				<dt class='order bar_hover'></dt>
+				<dd class='hide_bar'>我的订单</dd>
+			</dl>
+			<dl>
+				<dt class='like bar_hover'></dt>
+				<dd class='hide_bar'>我喜欢的</dd>
+			</dl>
+			<dl>
+				<dt class='zuji bar_hover'></dt>
+				<dd class='hide_bar'>我的足迹</dd>
+			</dl>
+			<dl>
+				<dt class='shoopcart bar_hover'></dt>
+				<dd class='hide_bar'>我的购物车</dd>
+			</dl>
+		</div>
+		<dl class='right_bar_bottom'>
+			<dt><a href='#'>建议反馈</a></dt>
+			<dd><a href='#'></a></dd>
+		</dl>
 	</div>
 </body>
 </html>
