--- a/src/html/login.html
+++ b/src/html/login.html
@@ -39,7 +39,7 @@
 					<div class='forget'>
 						<a href='#'>忘记密码？</a>
 					</div>
-					<div class='submit'>
+					<div class='submit login_sum'>
 						<input type="button" value="登 录" />
 					</div>
 				</div>
