--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 		<div class='wrapper'>
 			<div class='logininfo'>
 				<span class='nocolorc'><a href='index.html'>商城首页</a></span>
-				<span>Hi~欢迎来到ZOL商城，请<a href='#'>登录</a></span>
-				<span class='no-padding'><a href='#'>免费注册</a></span>
+				<span>Hi~欢迎来到ZOL商城，请<a href='html/login.html'>登录</a></span>
+				<span class='no-padding'><a href='html/register.html'>免费注册</a></span>
 			</div>
 			<ul class="topmenu">
 				<li><a href="#">我的订单</a></li>
