--- a/src/html/register.html
+++ b/src/html/register.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class='register_wapper login_center clear'>
 		<div class='reg_title'>30秒快速注册，加入ZOL商城</div>
-			<form>
+			<form action='login.html'>
 				<div class='reg_inf'>
 					<ul class="register-tab" >                   
 						<li class="current" rel="phone">
@@ -32,8 +32,7 @@
 						<div class="reg-input phone">
 						    <div class="label"><em>*</em>手机号：</div>
                             <input type="text" class="text"/>
-							<i class="right" style="display:none"></i>
-							<i class="wrong" style="display:none"></i>
+							<i style="display:none"></i>
 						    <div class="tips">请填写手机号码</div>
 					    </div>
 						<div class="reg-input pic_yan yan">
@@ -42,30 +41,26 @@
                             <div class='pic_ma zheng'>
                             	<img/>
                             </div>
-							<i class="right" style="display:none"></i>
-							<i class="wrong" style="display:none"></i>
+							<i style="display:none"></i>
 						    <div class="tips">请填写验证码</div>
 					    </div>
 						<div class="reg-input mes_yan yan">
 						    <div class="label"><em>*</em>验证码：</div>
                             <input type="text" class="text"/>
                             <div class='mes_ma zheng'>获取短信验证码</div>
-							<i class="right" style="display:none"></i>
-							<i class="wrong" style="display:none"></i>
+							<i class='right' style="display:none"></i>
 						    <div class="tips">获取短信验证码</div>
 					    </div>
 						<div class="reg-input passW">
 						    <div class="label"><em>*</em>密码：</div>
                             <input type="password" class="text"/>
-							<i class="right" style="display:none"></i>
-							<i class="wrong" style="display:none"></i>
+							<i style="display:none"></i>
 						    <div class="tips">6-16位数字和字母，不能使用特殊字符</div>
 					    </div>
 					    <div class="reg-input checkPass">
 						    <div class="label"><em>*</em>密码：</div>
                             <input type="password" class="text"/>
-							<i class="right" style="display:none"></i>
-							<i class="wrong" style="display:none"></i>
+							<i style="display:none"></i>
 						    <div class="tips">再次输入密码</div>
 					    </div>					    					
 					    <label class="agreement">           
