--- a/src/html/shopcart.html
+++ b/src/html/shopcart.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>列表页面</title>
+	<title>购物车页面</title>
 	<link href="../css/common.css" type="text/css" rel="stylesheet">
+	<link href="../css/shoopcart.css" type="text/css" rel="stylesheet">	
 	<script src="../assets/jquery-1.12.0.js"></script>
-	<script src="../js/index.js"></script>
+	<script src="../js/shoopcart.js"></script>
 </head>
 <body>
 		<!--top部分-->
@@ -41,6 +42,159 @@
 					<div class='showDiv' id='lianxi_show'>400-678-0068</div>
 				</li>
 			</ul>
+		</div>
+	</div>
+	<div class='cart_header cart_center'>
+		<a href='../index.html'>
+			<h1><img src='../img/cartlogo.jpg'/></h1>
+			<p>中关村在线旗下网上商城</p>
+		</a>
+		<ul class='steps'>
+            <li class="s2">下订单</li>
+            <li class="s3">去付款</li>
+            <li class="s4">确认收货</li>
+            <li class="s5">评价</li>
+		</ul>
+	</div>
+	<div class='shoop_cart cart_center'>
+		<form>
+			<div class='total'>
+				<p>购物车状态<em>(3/30)</em></p>
+				<div class='total_price'>
+					<input class="submitCart" type="submit" value="去结算">
+					<span>
+						总计（不含运费）：<em>¥</em>
+						<em class="total-cart-price">11679</em>
+					</span>
+				</div>
+			</div>
+			<div class='shoopcart_list'>
+				<ul class='title_list'>
+					<li class="th-1">
+						<label><input type="checkbox" value="1" checked="">全选</label>
+					</li>
+							<li class="th-2">所选商品</li>
+							<li class="th-3">单价（元）</li>
+							<li class="th-4">数量</li>
+							<li class="th-5">优惠</li>
+							<li class="th-6">小计（元）</li>
+							<li class="th-7">操作</li>
+				</ul>
+				<ul class='shoop_inf'>
+					<li>
+						<div class="shopname">
+									<input name="store" type="checkbox"/>店铺：
+									<a href="#"/>盛通数码专营店</a>
+	                            </div>
+	                            <div class='contact'>
+	                            	<a href='#'><img src='../img/shoopcart1.png'/></a>
+	                            </div>
+	                             <div class='contact'>
+	                             	<a href='#'><img src='../img/shoopcart2.gif'/></a>
+	                    </div>
+					</li>
+				</ul>
+				<ul class='shoop_store'>
+					<li class='goodinf'>
+						<input  type="checkbox" />
+						<a href='#' class='pic'><img src='../img/shoopgoods1.jpg'/></a>
+						<div class='text_inf'>
+							<a href='#'>
+								【移动电源 +自拍杆+指环支架 盛通数码 华为专卖 】华为 P9   全网通 标准版 3GB+32GB    大
+							</a>
+							<div class='shoop_zhibao'>
+								<a href='#'></a>
+								<a href='#'></a>
+								<a href='#'></a>
+								<a href='#'></a>
+							</div>
+							<div class='xuan'>
+								<p class='yanse'>颜色：<i>白色</i></p>
+								<p class='taocan'>套餐：<i>官方套餐</i></p>								
+							</div>
+						</div>
+					</li>
+					<li class='price'>
+						<i>2888</i>
+					</li>
+					<li class='count'>
+						<span class='jiannum'>-</span>
+						<input class='num' value='3'/>
+						<span class='jiaonum'>+</span>
+					</li>
+					<li class='jianprice'>---</li>
+					<li class='s-total'>
+						<em>5888</em>
+					</li>
+					<li class='del'>
+						<a href='#'>移入收藏夹</a>
+						<a href='#' class='del_cart'>删除</a>
+					</li>
+				</ul>
+			</div>
+		</form>
+	</div>
+	<div class='like cart_center'>
+		<ul class='likeList'>
+			<li>猜你喜欢</li>
+		</ul>
+		<div class='maylike'>
+			<ul class='goodsList'>
+				<li>
+					<a class="pic" href="#">
+						<img width="160" height="120" src="../img/cartlike1.jpg">
+						<span>华为 Mate8（NXT-DL00/联</span>
+					</a>
+					<div class='price'>¥2328.00</div>
+				</li>
+				<li>
+					<a class="pic" href="#">
+						<img width="160" height="120" src="../img/cartlike5.jpg">
+						<span>华为 Mate8（NXT-DL00/联</span>
+					</a>
+					<div class='price'>¥2328.00</div>
+				</li>
+				<li>
+					<a class="pic" href="#">
+						<img width="160" height="120" src="../img/cartlike2.jpg">
+						<span>华为 Mate8（NXT-DL00/联</span>
+					</a>
+					<div class='price'>¥2328.00</div>
+				</li>
+				<li>
+					<a class="pic" href="#">
+						<img width="160" height="120" src="../img/cartlike3.jpg">
+						<span>华为 Mate8（NXT-DL00/联</span>
+					</a>
+					<div class='price'>¥2328.00</div>
+				</li>
+				<li>
+					<a class="pic" href="#">
+						<img width="160" height="120" src="../img/cartlike4.jpg">
+						<span>华为 Mate8（NXT-DL00/联</span>
+					</a>
+					<div class='price'>¥2328.00</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class='cart_footer cart_center'>
+		<p class="links">
+			<a  href="#">关于商城</a>|
+			<a  href="#">营销中心</a>|
+			<a  href="#">服务中心</a>|
+			<a  href="#">联系我们</a>|
+			<a  href="#">发展历程</a>|
+			<a  href="#">媒体报道</a>
+		</p>
+		<p><span class="copyright">
+			©2016中关村在线 版权所有. 京ICP备09041801号-182
+			<a  href="#">京ICP证010391号</a></span>
+        </p>
+        <div class="authentication">
+        	<a href="#"><img src="../img/beian.jpg"/></a>
+        	<a href="#"><img src='../img/chengxin.jpg'></a>
+        	<a href='#'><img src="../img/chengxin.jpg"></a>
 		</div>
 	</div>
 </body>
