--- a/src/html/product.html
+++ b/src/html/product.html
@@ -284,8 +284,8 @@
                         			</p>
 								</div>
 								<div class='chose'>
-									<form action="shopcart.html">
-                        				<input class="submit" type="submit" value="去购物车结算">
+									<form>
+                        				<a class="submit" href='shopcart.html'>去购物车结算</a>
                        					 <a href="#">继续购物</a>
                    					 </form>
 								</div>
