主页bug，用户登录bug完成

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -29,6 +29,7 @@
 					<h3>登录ZOL商城</h3>
 					<a href='#'>手机动态码登录</a>
 				</div>
+				<div class='login_wrong'></div>
 				<div class='login_content'>
 					<div class='input_item username'>
 						<input type="text" value="" placeholder="手机号/邮箱/用户名"/>
@@ -65,5 +66,5 @@
 	</div>	
 </body>
 	<script src="../assets/jquery-1.12.0.js"></script>
-	<script src="../js/log_reg.js"></script>
+	<script src="../js/login.js"></script>
 </html>
