--- a/src/html/register.html
+++ b/src/html/register.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class='register_wapper login_center clear'>
 		<div class='reg_title'>30秒快速注册，加入ZOL商城</div>
-			<form action='login.html'>
+			<form>
 				<div class='reg_inf'>
 					<ul class="register-tab" >                   
 						<li class="current" rel="phone">
